# qick

./: .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CLAUDE.md  LICENSE  MANIFEST.in  README.md  clock_models.py  lmk04828b_regmap_out.json  proj.tcl  pyproject.toml  regmap_parsing.ipynb  requirements.txt  setup.py  setup_emulator.sh
.github/: SUPPORT.md
bkp/: CHANGELOG.md  Makefile  README.md  pyproject.toml
bkp/cfg/constraints/: PYNQ_Z2_v1.0.xdc
bkp/common/glbl/: glbl.core
bkp/common/lint/: lint.core
bkp/common/pyxsi_utils/: pyxsi_utils.core  pyxsi_utils.py
bkp/common/simutils/: __init__.py  simutils.core  simutils.py  vcd_utils.py
bkp/cores/ack_cmd/: ack_cmd.core
bkp/cores/axi_slv/: axil_slv.core
bkp/cores/axis_exec_op/: Makefile
bkp/cores/axis_tlast_gen_v1_0/: axis_tlast_gen.vhd
bkp/cores/dds/: dds.core  dds_0.1.core
bkp/cores/dual_edge_det/: dual_edge_det.core
bkp/cores/leds_status/: leds_status.core
bkp/cores/mux2/: mux2.core
bkp/cores/narrow_en_signal/: narrow_en_signal.core
bkp/cores/par2ser/: par2ser.core
bkp/cores/qick_pkg/: qick_pkg.core
bkp/cores/rising_edge_det/: rising_edge_det.core
bkp/cores/rx_cmd/: rx_cmd.core
bkp/cores/ser2par/: ser2par.core
bkp/cores/shift_reg_n/: shift_reg_n.core
bkp/cores/sync_en_pulse/: sync_en_pulse.core
bkp/cores/sync_nxm/: sync_nxm.core
bkp/cores/synchronizer/: synchronizer.core
bkp/cores/tx_cmd/: tx_cmd.core
bkp/cores/wide_en_signal/: wide_en_signal.core
bkp/cores/xcom/: xcom.core
bkp/cores/xcom_axi_slv/: xcom_axil_slv.core
bkp/cores/xcom_cdc/: xcom_cdc.core
(+2109 files in other folders)
