[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pynq_fused"
version = "0.0.1"
description = "PYNQ_FUSED Python Package"
dependencies = [
    "wheel",
    "numpy",
    "matplotlib",
    "fxpmath",
    "scipy",
    "pyxsi@git+https://github.com/ivanvig/pyxsi.git",
    "edalize==0.5.1",
    "fusesoc==2.2.1",
    "pyqt5",
    "vcdvcd",
    "pandas",
    "jinja2",
    "peakrdl>=0.6.0",
    "systemrdl-compiler",
    "ralbot@git+https://github.com/Julian-DD/RALBot-header",
    "pytest==7.2.0",
    "pyqtgraph"
]

[tool.setuptools]
packages = ["ip", "models", "pyxsi_utils", "simutils"]

[tool.setuptools.package-dir]
cores = "ip"
models = "scripts/utils"
pyxsi_utils = "common/pyxsi_utils"
simutils = "common/simutils"
